--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ display: inline-block;
     border-radius: 12px;
 }
 
-
+/*
 .floating-meme {
     position: fixed;
     width: 180px;
@@ -151,7 +151,17 @@ display: inline-block;
     pointer-events: none;
     transition: left 0.6s ease, top 0.6s ease, opacity 3.5s ease;
     opacity: 1;
+}  */
+.floating-meme {
+    position: fixed;
+    height: auto;
+    z-index: 1;
+    pointer-events: none;
+    transition: left 0.6s ease, top 0.6s ease, transform 0.6s ease, opacity 3.5s ease;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+    border-radius: 10px;
 }
+
 
 .fade-out {
     opacity: 0;
