--- a/style.css
+++ b/style.css
@@ -145,13 +145,14 @@ display: inline-block;
 /*
 .floating-meme {
     position: fixed;
-    width: 180px;
     height: auto;
     z-index: 1;
     pointer-events: none;
-    transition: left 0.6s ease, top 0.6s ease, opacity 3.5s ease;
-    opacity: 1;
-}  */
+    transition: left 0.6s ease, top 0.6s ease, transform 0.6s ease, opacity 3.5s ease;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+    border-radius: 10px;
+}
+*/
 .floating-meme {
     position: fixed;
     height: auto;
@@ -161,6 +162,7 @@ display: inline-block;
     box-shadow: 0 8px 20px rgba(0,0,0,0.25);
     border-radius: 10px;
 }
+
 
 
 .fade-out {
